# paopao-ce

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  CHANGELOG.md  Dockerfile  Dockerfile.allinone  INSTALL.md  INSTALL_ZH.md  LICENSE  Makefile  README.md  README_ZH.md  ROADMAP.md  buf.connect.gen.yaml  buf.gen.yaml  buf.work.yaml  build-allinone.sh  build-image.sh  build-release.sh  build.sh  config.docker-compose.yaml  config.yaml.sample  default.pgo  deployed-sites.md  docker-compose.yaml  docker-compose.yaml.backup  features-status.md  go.mod  go.sum  init.go  magefile.go  main.go  operation.yml  paopao.sql  run.sh
.github/: dependabot.yml
auto/: README!BEFORE!EDIT!.txt
cmd/: root.go  version.go
cmd/serve/: serve.go
docker/: README.md  config.yaml  paopao-ce_config.yaml  sshd_config  start.sh
docs/: README.md  README_ZH.md  embed.go  index.html  openapi.json
global/: db.go  setting.go
internal/: internal.go
mirc/: README.md  gen.go  main.go
paopao-api/: config.yaml.sample  go.mod  init.go  main.go
paopao-web/: Dockerfile  index.html  jsconfig.json  package.json  tsconfig.json  vite.config.js
proto/: RADME.md  buf.yaml
scripts/: paopao-mysql.sql  paopao-postgres.sql  paopao-sqlite3.sql
web/: .dockerignore  .env  .env.development  .env.production  .eslintignore  .eslintrc.js  .gitignore  .stylelintignore  Dockerfile  README.md  embed.go  index.html  package.json  stylelint.config.js  tsconfig.json  vite.config.ts
web/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: main.rs
(+1120 files in other folders)
