[package]
name = "paopao"
version = "0.1.0"
description = "Paopao App"
authors = ["Rocboss"]
license = "MIT License"
repository = "https://github.com/rocboss/paopao-ce"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
